bug/minor: ui/ux: dark mode tomselect inputs unreadable

--- a/src/scss/_tom-select.scss
+++ b/src/scss/_tom-select.scss
@@ -23,7 +23,7 @@
     border: 1px solid var(--secondary-muted);
   }
 
-  #filterOwner-ts-control {
+  .ts-control input {
     background-color: var(--mainbackground);
     color: var(--mediumstrong);
   }
